[package]
name = "todo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
sea-orm = "0.12.10"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx-postgres = "0.7.3"
tokio = { version = "1.35.1", features = ["full", "rt-multi-thread"] }
tower-http = "0.5.0"
